--- a/templates/uk-cv/styles.css
+++ b/templates/uk-cv/styles.css
@@ -22,7 +22,7 @@ a {
 .contact-line {
     font-size: 10pt;
     color: #333;
-    text-align: center;
+    text-align: left;
     margin: 0 0 10px 0;
     line-height: 2;
 }
